--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -23,7 +23,7 @@
               <li><a routerLink="/landingmagazine">{{ 'header.landingmagazine' | translate }}</a></li>
               <li><a routerLink="/tablehistory">{{ 'header.tablehistory' | translate }}</a></li>
               <li><a routerLink="/tablehistoryreviews">{{ 'header.tablehistoryreviews' | translate }}</a></li>
-              <li><a routerLink="/transactions">{{ 'header.transactions' | translate }}</a></li>
+              <li><a routerLink="/payment">{{ 'header.transactions' | translate }}</a></li>
               <li><a routerLink="/partners">{{ 'header.partners' | translate }}</a></li>
               <li><a routerLink="/user/settings">{{ 'header.user-settings' | translate }}</a></li>
               <li><a routerLink="/prepaid-card">{{ 'header.prepaid-card' | translate }}</a></li>
@@ -43,9 +43,9 @@
           <a href="#" class="btn btn-accent rippler rippler-default js-dropdown-link"><span class="dropdown-link">{{ 'header.user-login-btn' | translate }}</span></a>
           <div class="dropdown-data">
             <ul>
-              <li><a href="#">{{ 'header.user-dropdownlist.link1' | translate }}</a></li>
-              <li><a href="#">{{ 'header.user-dropdownlist.link2' | translate }}</a></li>
-              <li><a href="#">{{ 'header.user-dropdownlist.link3' | translate }}</a></li>
+              <li><a routerLink="/user/settings">{{ 'header.user-dropdownlist.link1' | translate }}</a></li>
+              <li><a routerLink="/tablehistory">{{ 'header.user-dropdownlist.link2' | translate }}</a></li>
+              <li><a routerLink="/partners">{{ 'header.user-dropdownlist.link3' | translate }}</a></li>
               <li><a href="#">{{ 'header.user-dropdownlist.link4' | translate }}</a></li>
             </ul>
             <hr class="full-width">
