--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -56,6 +56,8 @@
                     </thead>
 
                     <tbody>
+                      <tr *ngIf="refArray.length === 0"><td colspan="5" class="text-center"><br>You have not invited any referrals</td></tr>
+
                       <tr *ngFor="let listItem of refArray; let i = index">
                         <td>{{listItem.name}}</td>
                         <td>{{listItem.date.date | date: 'dd.MM.yyyy'}}</td>
