--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -799,13 +799,13 @@ hr
 	margin-right: auto
 	margin-left: auto
 	&-btn
+    display: block
     height: 33px
     width: 33px
     background: url("../img/svg/switch-btn.svg")
     background-position: center
     background-size: 33px
     margin: 8px auto
-    cursor: pointer
 	&-stats
 		display: -webkit-flex
 		display: -moz-flex
